<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvapp_cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginBottom="@dimen/adetalle_iv_margin"
    card_view:cardCornerRadius="@dimen/amain_cv_radioEsq"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="0.7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/cvapp_iv_imgApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/sh_sm_img"
                android:scaleType="centerCrop" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cvapp_tv_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amain_tv_titCardv"
                android:textStyle="bold"
                android:textSize="@dimen/amain_cvtv_tamanio"/>
            <TextView
                android:id="@+id/cvapp_tv_autor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amain_tv_desCardv"
                />
            <TextView
                android:id="@+id/cvapp_tv_califica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.4"
                />
            <TextView
                android:id="@+id/cvapp_tv_instalada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cvapp_tv_instalada"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>